--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,18 @@
 name: plant_system_env
 channels:
   - defaults
+  - conda-forge
 dependencies:
-  - python=3.10
+  - python=3.9
+  - bokeh=2.4.2
+  - numpy=1.21.*
+  - nodejs=16.13.*
+  - flask
   - pip
   - pip:
-    - wandb
-    - transformers
+    - Flask-Testing
     - streamlit
-    - requests
-    - tensorflow
-    - pillow
-    - opencv-python-headless
-    - google.colab
     - streamlit-lottie
-  - ipython
+    - google-generativeai
+
  
