--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.9
+  - blinker=1.4
   - bokeh=2.4.2
   - numpy=1.21.*
   - nodejs=16.13.*
@@ -12,7 +13,6 @@ dependencies:
   - pip
   - pip:
     - Flask-Testing
-    - blinker
     - tensorflow==2.15.0
     - streamlit
     - streamlit-lottie
