--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.9
   - blinker=1.4
-  - cachetools=4.2.5
+  - cachetools
   - bokeh=2.4.2
   - numpy=1.21.*
   - nodejs=16.13.*
