--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - python=3.9
   - blinker=1.4
+  - grpcio
   - cachetools
   - bokeh=2.4.2
   - numpy=1.21.*
@@ -12,7 +13,6 @@ dependencies:
   - flask
   - idna
   - charset-normalizer
-  - opencv-python
   - urllib3
   - pip
   - pip:
@@ -21,5 +21,6 @@ dependencies:
     - streamlit
     - streamlit-lottie
     - google-generativeai
+    - opencv-python
 
  
