--- a/environment.yml
+++ b/environment.yml
@@ -7,18 +7,18 @@ channels:
 dependencies:
   - python=3.9
   - blinker=1.4
-  - grpcio
+  - conda-forge:: grpcio
   - cachetools
-  - bokeh=2.4.2
-  - numpy=1.21.*
-  - nodejs=16.13.*
-  - flask
+  - conda-forge:: bokeh=2.4.2
+  - conda-forge:: numpy=1.21.*
+  - conda-forge:: nodejs=16.13.*
+  - conda-forge:: flask
   - idna
   - protobuf
   - charset-normalizer
   - urllib3
-  - google-auth
-  - ipython
+  - conda-forge:: google-auth
+  - conda-forge:: ipython
   - requests
   - pillow
   - pip
