--- a/environment.yml
+++ b/environment.yml
@@ -1,29 +1,24 @@
 name: plant_system_env
 channels:
   - conda-forge
-  - defaults
-  
 dependencies:
   - python=3.9
   - grpcio
-  - blinker=1.4.*
+  - blinker
   - cachetools
-  - bokeh=2.4.2
-  - numpy=1.21.*
-  - nodejs=16.13.*
+  - bokeh=2.4
+  - numpy
+  - nodejs
   - flask
   - protobuf
   - requests
   - pillow
   - ipython
   - google-auth
-  - idna
-  - charset-normalizer
-  - urllib3
   - pip
   - pip:
     - streamlit
     - streamlit-lottie
-    - tensorflow==2.15.0.*
+    - tensorflow==2.15.0
     - google-generativeai
     - opencv-python
